opam-version: "1.2"
maintainer: "jeremie@dimino.org"
authors: ["Jérémie Dimino"]
license: "BSD3"
homepage: "https://github.com/diml/ppxfind"
bug-reports: "https://github.com/diml/ppxfind/issues"
dev-repo: "git://github.com/diml/ppxfind.git"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder" {build & >= "1.0+beta16"}
  "ocaml-migrate-parsetree"
  "ocamlfind"
]
available: [ ocaml-version >= "4.02.3" ]
conflicts: [ "dune" {= "1.2.0" | = "1.2.1"} ]
